<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CreateUserActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/layout_bg" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/emailText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Email"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createEmail"
                style="@style/TextInput"
                android:fontFamily="@font/allerta"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/pwText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Password"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createPw"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Name"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createName"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Age"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createAge"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="number" />


            <TextView
                android:id="@+id/nrText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Phone Number"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createNr"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="number" />



            <TextView
                android:id="@+id/locText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Location"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createLocation"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="text" />



            <TextView
                android:id="@+id/workoutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Workout "
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createWoPref"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="text" />



            <TextView
                android:id="@+id/weatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="Weather"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/createWePref"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:inputType="text" />



            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_effect_2"
                android:fontFamily="@font/allerta"
                android:text="Sign Up"
                android:textColor="@color/White" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/createBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>