...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_5"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/thumbs_down_icon" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_5"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/thumbs_up_icon" />
...
